examples/bad/runtime4.swifty
//array with not positive size

var x = 0

var arr = array(x,10)
